# automcp

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  clean_history.ps1  config.yaml  config_loader.py  demo_production_cli.py  main.py  pyproject.toml  pyproject.toml.backup  replacements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: must follow rewuirements.instructions.md
.github/workflows/: ci.yml  release.yml
config/: default.yaml  development.yaml  enterprise.yaml  fallback.yaml  production.yaml
docs/: installation.md  usage.md
examples/expected_outputs/generic_client/: capabilities.json  enriched_intents.json  mcp_tools.json  tools_catalog.json
examples/expected_outputs/langchain_client/: capabilities.json  enriched_intents.json  mcp_tools.json  tools_catalog.json
examples/outputs/aws_cloudsearch/: enriched_intents.json  mcp_tools.json
inputs/: adobe.yaml  aws_budgets.yaml  events.yaml  test_simple.yaml
outputs/aws_budgets/: capabilities.json  enriched_intents.json  mcp_tools.json
outputs/aws_cloudsearch/: capabilities.json
outputs/test_simple/: capabilities.json  enriched_intents.json  mcp_tools.json
src/: __init__.py  config.yaml  enricher.py  parsers.py
src/automcp/: __init__.py  cli.py  cli_old.py  config.py
src/automcp/core/: __init__.py  async_llm_client-refernce.py  async_llm_client.py  config.py  exceptions.py  llm_client_interface.py  output_generator.py
src/automcp/models/: __init__.py  capability.py  intent.py  mcp_tool.py
src/automcp/utils/: __init__.py  logging.py  validation.py
tests/: compare_results.py  comprehensive_analysis.py  enhanced_mcp_agent.py  final_demonstration.py  quick_aws_test.py  test_aws_groq.py  test_aws_mcp_agent.py  test_connectiion.py  test_final_groq.py  test_improved_groq.py  test_optimized_groq.py
tests/outputs/: aws_capabilities.json  aws_enriched_intents.json  aws_mcp_tools.json  groq_capabilities.json  groq_enriched_intents.json  groq_mcp_tools.json  improved_groq_capabilities.json  improved_groq_enriched_intents.json  improved_groq_mcp_tools.json  optimized_groq_capabilities.json  optimized_groq_enriched_intents.json  optimized_groq_mcp_tools.json  sample_capabilities.json  sample_enriched_intents.json  sample_mcp_tools.json
tests/outputs/enterprise_simple/: capabilities.json  enriched_intents.json  mcp_tools.json
